--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,12 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.mydotey.quantile</groupId>
+            <artifactId>quantile</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
