--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,7 @@
 server.port = 8090
+spring.datasource.url=jdbc:mysql://peabody28.com:6612/mathOperation
+spring.datasource.username=root
+spring.datasource.password=152437689hH#
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
